[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Battles/Utilities/PlayerCharacter.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayerHitBox.gd" type="Script" id=3]
[ext_resource path="res://images/Terra.png" type="Texture" id=4]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 32.0
height = 74.0

[node name="PlayerCharacter" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -74.427
margin_right = -10.0
margin_bottom = -73.727
rect_scale = Vector2( 4, 10 )
color = Color( 0.72549, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedBar" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -81.335
margin_right = -10.0
margin_bottom = -80.635
rect_scale = Vector2( 4, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poison" type="Timer" parent="."]
autostart = true

[node name="HP" type="Label" parent="."]
margin_left = -20.5074
margin_top = -73.1288
margin_right = 119.493
margin_bottom = -45.1288
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHitBox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="timeout" from="Poison" to="." method="_on_Poison_timeout"]
